deployment-grading.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grading
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grading
  template:
    metadata:
      labels:
        app: grading
    spec:
      containers:
      - name: grading
        image: dwf19/quiz-app_grading:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: grading
spec:
  selector:
    app: grading
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
