deployment-quiz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
      - name: quiz
        image: dwf19/quiz-app_quiz:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: quiz
spec:
  selector:
    app: quiz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
